[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Fonts/D-DIN-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Textures/Lights/light.png" type="Texture" id=3]
[ext_resource path="res://Textures/Lights/mask.png" type="Texture" id=4]
[ext_resource path="res://UI/DevModeMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Textures/UI/Spinner/frame-18.png" type="Texture" id=6]
[ext_resource path="res://Textures/UI/Spinner/frame-10.png" type="Texture" id=7]
[ext_resource path="res://Textures/UI/Spinner/frame-8.png" type="Texture" id=8]
[ext_resource path="res://Textures/UI/Spinner/frame-12.png" type="Texture" id=9]
[ext_resource path="res://Textures/UI/Spinner/frame-28.png" type="Texture" id=10]
[ext_resource path="res://Textures/UI/Spinner/frame-0.png" type="Texture" id=11]
[ext_resource path="res://Textures/UI/Spinner/frame-24.png" type="Texture" id=12]
[ext_resource path="res://Textures/UI/Spinner/frame-22.png" type="Texture" id=13]
[ext_resource path="res://Textures/UI/Spinner/frame-14.png" type="Texture" id=14]
[ext_resource path="res://Textures/UI/Spinner/frame-6.png" type="Texture" id=15]
[ext_resource path="res://Textures/UI/Spinner/frame-16.png" type="Texture" id=16]
[ext_resource path="res://Textures/UI/Spinner/frame-20.png" type="Texture" id=17]
[ext_resource path="res://Textures/UI/Spinner/frame-4.png" type="Texture" id=18]
[ext_resource path="res://Textures/UI/Spinner/frame-26.png" type="Texture" id=19]
[ext_resource path="res://Textures/UI/Spinner/frame-2.png" type="Texture" id=20]
[ext_resource path="res://playerIcon.png" type="Texture" id=21]

[sub_resource type="Environment" id=1]
background_energy = 0.0
ambient_light_energy = 0.0
adjustment_enabled = true
adjustment_brightness = 0.01

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.145098, 0.145098, 0.164706, 0.784314 )

[sub_resource type="ImageTexture" id=5]

[sub_resource type="DynamicFont" id=6]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.152941, 0.14902, 0.172549, 0.705882 )

[sub_resource type="DynamicFont" id=8]
size = 42
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.101961, 0.0941176, 0.109804, 1 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 6 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="DynamicFont" id=11]
size = 42
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.141176, 0.129412, 0.180392, 0.807843 )

[sub_resource type="DynamicFont" id=13]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 4
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 18
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=15]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LoadCover:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LoadCover:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LoadCover:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="Node2D"]
position = Vector2( 800, 450 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 0.15, 0.15 )
z_index = 3
z_as_relative = false
texture = ExtResource( 21 )

[node name="Light2D" type="Light2D" parent="KinematicBody2D"]
z_index = 6
z_as_relative = false
enabled = false
texture = ExtResource( 3 )
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )

[node name="LightMask" type="Light2D" parent="KinematicBody2D"]
z_index = 6
z_as_relative = false
texture = ExtResource( 4 )
energy = 0.0
mode = 1
shadow_color = Color( 0, 0, 0, 1 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
light_mask = 0
z_index = 100
current = true
zoom = Vector2( 2.5, 2.5 )

[node name="GameUI" type="Node2D" parent="KinematicBody2D/Camera2D"]
light_mask = 16

[node name="UILayer" type="CanvasLayer" parent="KinematicBody2D/Camera2D"]

[node name="UIContainer" type="Control" parent="KinematicBody2D/Camera2D/UILayer"]
margin_top = -0.0944824
margin_right = 1600.0
margin_bottom = 899.906
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 800, 450 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label14" type="Label" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
margin_left = 1384.0
margin_top = 402.0
margin_right = 1568.0
margin_bottom = 423.0
rect_pivot_offset = Vector2( 32, 2 )
custom_fonts/font = SubResource( 3 )
text = "Selected block:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockName" type="Label" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
margin_left = 1384.0
margin_top = 474.0
margin_right = 1568.0
margin_bottom = 495.0
rect_pivot_offset = Vector2( 32, 2 )
custom_fonts/font = SubResource( 3 )
text = "None"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
margin_left = 1544.0
margin_top = 10.0
margin_right = 1594.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 32, 2 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
margin_left = 1576.0
margin_top = 882.0
margin_right = 1600.0
margin_bottom = 902.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
margin_left = 1532.0
margin_top = 430.0
margin_right = 1572.0
margin_bottom = 470.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Block" type="TextureRect" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
margin_left = 1536.0
margin_top = 434.0
margin_right = 1568.0
margin_bottom = 466.0
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
margin_left = 39.0465
margin_top = 825.597
margin_right = 302.046
margin_bottom = 858.597
custom_fonts/font = SubResource( 6 )
text = "Health: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mode" type="Label" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
margin_left = 39.0465
margin_top = 788.597
margin_right = 302.046
margin_bottom = 821.597
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBox" type="Panel" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
visible = false
margin_left = 460.0
margin_top = 229.0
margin_right = 1140.0
margin_bottom = 668.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="KinematicBody2D/Camera2D/UILayer/UIContainer/MenuBox"]
margin_left = 53.0
margin_top = 53.0
margin_right = 631.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 8 )
text = "Return to Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="KinematicBody2D/Camera2D/UILayer/UIContainer/MenuBox"]
margin_left = 53.0
margin_top = 143.0
margin_right = 631.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 8 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="KinematicBody2D/Camera2D/UILayer/UIContainer/MenuBox"]
margin_left = 53.0
margin_top = 233.0
margin_right = 631.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 8 )
text = "Save Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="KinematicBody2D/Camera2D/UILayer/UIContainer/MenuBox"]
margin_left = 53.0
margin_top = 323.0
margin_right = 631.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 8 )
text = "Exit to Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadCover" type="Panel" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D/Camera2D/UILayer/UIContainer/LoadCover"]
position = Vector2( 800, 560.094 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 10 )
frame = 1
playing = true

[node name="Label" type="Label" parent="KinematicBody2D/Camera2D/UILayer/UIContainer/LoadCover"]
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 0.75
custom_fonts/font = SubResource( 11 )
text = "Game may freeze during loading."
align = 1
valign = 1

[node name="Message" type="Label" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
visible = false
margin_left = 492.0
margin_top = 103.0
margin_right = 1111.0
margin_bottom = 143.0
rect_pivot_offset = Vector2( 32, 2 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 0
align = 1
autowrap = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="KinematicBody2D/Camera2D/UILayer/UIContainer/Message"]
visible = false
margin_top = 50.0
margin_right = 619.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 14 )

[node name="DevModeMenu" parent="KinematicBody2D/Camera2D/UILayer/UIContainer" instance=ExtResource( 5 )]
show_behind_parent = true
window_title = "Developer Mode - Info Panel"

[node name="Animations" type="AnimationPlayer" parent="KinematicBody2D/Camera2D/UILayer/UIContainer"]
anims/Fade = SubResource( 15 )

[node name="InGameMusic" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
volume_db = -15.0
bus = "Music"

[node name="FootstepSound" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
volume_db = -14.0
bus = "Footsteps"

[node name="FootstepTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 0.75
autostart = true
[connection signal="pressed" from="KinematicBody2D/Camera2D/UILayer/UIContainer/MenuBox/Return" to="KinematicBody2D" method="_on_Return_pressed"]
[connection signal="pressed" from="KinematicBody2D/Camera2D/UILayer/UIContainer/MenuBox/Settings" to="KinematicBody2D" method="_on_Settings_pressed"]
[connection signal="pressed" from="KinematicBody2D/Camera2D/UILayer/UIContainer/MenuBox/Save" to="KinematicBody2D" method="_on_Save_pressed"]
[connection signal="pressed" from="KinematicBody2D/Camera2D/UILayer/UIContainer/MenuBox/Exit" to="KinematicBody2D" method="_on_Exit_pressed"]
[connection signal="timeout" from="KinematicBody2D/FootstepTimer" to="KinematicBody2D" method="_on_FootstepTimer_timeout"]
